# imgui_boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/: application.cpp  application.h  custom_widgets.cpp  custom_widgets.h  main.cpp  main.mm  main_glfw_metal.mm  main_glut_opengl2.cpp  main_glwf_opengl2.cpp
